fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-065-6c1be61067.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box filter="blur(4px)" h="80px" w="120px" />"
