fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-066-6525a64377.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box backdropFilter="blur(8px)" h="90px" w="110px" />"
