fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-067-3ffe06a1a9.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box filter="contrast(100%) brightness(100%)" h="70px" w="140px" />"
