fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-068-0d86452528.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box filter="contrast(100%) brightness(100%)" h="60px" w="150px" />"
