fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-069-0fa1145f4c.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box backdropFilter="blur(12px)" h="80px" w="160px" />"
