fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-073-ef0cdd87cf.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  boxSize="100%"
  color="#F00"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  letterSpacing="0px"
  lineHeight="1.5px"
  textShadow="2px 4px 6px #00000080"
>
  Shadow
</Text>"
