fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-074-57a24a2690.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  boxSize="100%"
  color="#F00"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  letterSpacing="0px"
  lineHeight="1.5px"
  textShadow="1px 2px 3px #F00, 4px 5px 6px #0F0C"
>
  MultiShadow
</Text>"
